--- a/.pylintrc
+++ b/.pylintrc
@@ -2,4 +2,5 @@
 disable = 
   C0301, # Line too long
   I1101, E1101, # C-modules members
-  R0913 # Too many arguments
+  R0913, # Too many arguments
+  R0914 # Too many local variables
