--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=65.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "Returpost_Rykkerspærre"
+name = "src"
 version = "0.0.1"
 authors = [
   { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
