--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "src"
-version = "1.0.0"
+version = "1.0.1"
 authors = [
   { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
 ]
@@ -16,7 +16,7 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
 ]
 dependencies = [
-    "OpenOrchestrator = 1.0.0",
-    "Pillow = 9.5.0",
-    "ITK-dev-shared-components = 1.0.0",
+    "OpenOrchestrator == 1.X.X",
+    "Pillow == 9.5.0",
+    "ITK-dev-shared-components == 1.*.*",
 ]
