--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
 ]
 dependencies = [
-    "OpenOrchestrator == 1.X.X",
+    "OpenOrchestrator == 1.*",
     "Pillow == 9.5.0",
-    "ITK-dev-shared-components == 1.*.*",
+    "ITK-dev-shared-components == 1.*",
 ]
